--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: k8s
-          image: lakshman386/pet # Image that will be used to containers in the cluster
+          image: lakshman386/pet:${BUILD_NUMBER} # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
