--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: k8s-deployment
+  name: my-app-deployment
 spec:
   selector:
     matchLabels:
