--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
-  name: my-service
+  name: my-app-service
 spec:
   selector:
     app: my-app
@@ -14,7 +14,7 @@ spec:
   
   ---
   
-  apiVersion: v1
+apiVersion: apps/v1
 kind: Pod
 metadata:
   name: my-pod
@@ -23,7 +23,7 @@ metadata:
 spec:
   containers:
     - name: my-container
-      image: nginx
+      image: lakshman386/pet:latest
       ports:
-        - containerPort: 80  # Correct field name: containerPort
+        - containerPort: 8080  # Correct field name: containerPort
       
