--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-app
-          image: lakshman386/pet:latest # Image that will be used to containers in the cluster
+          image: lakshman386/pet_shop:latest # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
